RESOLVED FIXED270859
Picture-in-Picture from canvas-sourced video turns black when canvas is resized
https://bugs.webkit.org/show_bug.cgi?id=270859
Summary Picture-in-Picture from canvas-sourced video turns black when canvas is resized
Tamás Zahola
Reported 2024-03-12 10:18:07 PDT
Created attachment 470322 [details] HTML demonstration + video of crash When using the Picture-in-Picture mode for a HTMLCanvasElement-sourced video, the floating video turns black if the source canvas is resized. It is also possible to crash the browser (as of version 17.3.1 (19617.2.4.11.12)) if we click the "return from PIP" button on the video (see the attached crash.mov).
Attachments
HTML demonstration + video of crash (26.47 MB, application/zip)
2024-03-12 10:18 PDT, Tamás Zahola
no flags
Radar WebKit Bug Importer
Comment 1 2024-03-12 14:29:59 PDT
Ahmad Saleem
Comment 2 2024-04-04 14:47:26 PDT
Thanks @Tamas for filing, I am able to reproduce the crash.
Jean-Yves Avenard [:jya]
Comment 3 2024-04-26 02:16:59 PDT
EWS
Comment 4 2024-04-27 02:55:27 PDT
Committed 278075@main (c610bd1cd7c7): <https://commits.webkit.org/278075@main> Reviewed commits have been landed. Closing PR #27793 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.